--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.1'
 
 services:
-  app_name:
+  books:
     container_name: books
     image: books
     ports:
-      - '0.0.0.0:8082:3000'
+      - '0.0.0.0:8082:3002'
     volumes:
       - ./log:/app/log
       - ./db:/app/db
@@ -15,9 +15,9 @@ services:
       # These override config/puma.rb, but are defaults anyway.
       - WEB_CONCURRENCY=2
       - RAILS_MAX_THREADS=5
-    restart: unless-stopped
+    #restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/books/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3002/books/health"]
       interval: 30s
       retries: 3
       start_period: 10s
