--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,6 +8,7 @@ services:
       - '3000:3000'
     volumes:
       - '.:/app'
+    #  - '../grenander:/grenander'
     working_dir: /app
     command: >
       bash -c "apt update &&
