--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,18 @@
-version: '3.1'
-
 services:
-  books:
-    container_name: books
-    image: books
+  app_name:
+    image: ruby:2.7.7-slim-bullseye
+    container_name: books-dev
     ports:
-      - '0.0.0.0:8082:3000'
+      - '3000:3000'
     volumes:
-      - ./log:/app/log
-      - ./db:/app/db
-      - ./config/master.key:/app/config/master.key
-    environment:
-      - RAILS_ENV=production
-      # These override config/puma.rb, but are defaults anyway.
-      - WEB_CONCURRENCY=2
-      - RAILS_MAX_THREADS=5
-    restart: always
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3002/books/health"]
-      interval: 30s
-      retries: 3
-      start_period: 10s
-      timeout: 10s
+      - '.:/app'
+    #  - '../grenander:/grenander'
+    working_dir: /app
+    command: >
+      bash -c "apt update &&
+              apt install -y build-essential apt-utils git nodejs &&
+              cd /app &&
+              gem install bundler -v 2.4.22 &&
+              bundle install &&
+              bundle exec rails db:migrate &&
+              bundle exec rails server -b 0.0.0.0"
