--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 services:
   app_name:
-    image: ruby:2.7.7-slim-bullseye
+    image: ruby:3.3.4-slim-bookworm
     container_name: books-dev
     ports:
       - '3000:3000'
     volumes:
       - '.:/app'
-    #  - '../grenander:/grenander'
     working_dir: /app
     command: >
       bash -c "apt update &&
-              apt install -y build-essential apt-utils git nodejs &&
+              apt install -y build-essential apt-utils git pkg-config nodejs libsqlite3-dev npm &&
+              npm install -g yarn &&
               cd /app &&
-              gem install bundler -v 2.4.22 &&
+              yarn install --check-files &&
               bundle install &&
+              bundle update grenander &&
               bundle exec rails db:migrate &&
               bundle exec rails server -b 0.0.0.0"
