--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "mathes",
+  "name": "books",
   "private": true,
   "dependencies": {
+    "@rails/ujs": "^7.1.0",
+    "@rails/activestorage": "^7.1.0",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.21",
     "blacklight-range-limit": "^9.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "font-awesome": "^4.7.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "sass": "^1.92.1",
     "typeahead.js": "^0.11.1"
   },
+  "devDependencies": {
+    "esbuild": "^0.18.19"
+  },
   "scripts": {
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds",
+    "build:watch": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --watch",
+    
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
     "build:css:prefix": "postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
     "build:css": "yarn build:css:compile && yarn build:css:prefix",
