--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@ docker-compose.yml
 docker-compose-dev.yml
 .git
 .gitignore
+node_modules
 db/production.sqlite
 db/development.sqlite
 config/master.key
