--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ capybara-*.html
 *.orig
 rerun.txt
 pickle-email-*.html
+/db/*.sqlite3
+/db/*.sqlite3-wal
+/db/*.sqlite3-shm
 
 # Ignore all logfiles and tempfiles.
 /log/*
